# self-signed-certificates-operator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  check-libraries.yaml  codeql-analysis.yml  integration-test.yaml  lint-report.yaml  main.yaml  promote.yaml  publish-charm.yaml  static-analysis.yaml  unit-test.yaml
docs/: index.md
lib/charms/tls_certificates_interface/v2/: tls_certificates.py
lib/charms/tls_certificates_interface/v3/: tls_certificates.py
src/: certificates.py  charm.py  constants.py
terraform/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
tests/integration/: certificates.py  test_charm.py  test_integration.py
tests/unit/: certificates_helpers.py  test_certificates.py  test_charm.py  test_charm_collect_status.py  test_charm_configure.py  test_charm_get_ca_certificate.py  test_charm_get_issued_certificates.py  test_charm_rotate_private_key.py  test_send_ca_cert.py
