[project]
name = "self-signed-certificates-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "cryptography",
    "jsonschema",
    "ops >=2.17.1",
    "opentelemetry-exporter-otlp-proto-http",
    "pydantic==2.10.2",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "juju",
    "pytest",
    "pytest-operator",
    "pytest-asyncio==0.21.2",
    "ops[testing]",
]
dev = [
    "codespell",
    "pyright",
    "ruff",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D107",
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
